--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+   
    <head>
       <title> My Soccer Career </title>
       <link rel="stylesheet" type="text/css" href="styles.css">
@@ -39,7 +40,7 @@
             <h2>Club Carrer</h2>
             <hr class="dotted">
                <h3>Cosmos Jr.</h3>
-                  <img src='./pictures/IMG_1519.jpeg' class="rightpic" alt="Misael before one of this games at Cosmos Jrs.">
+                  <img src='./pictures/IMG_1519.jpeg' class="rightpic" alt="Misael before one of this games at Cosmos Jrs." style="height: 220px;">
                   <p id = 'left'>
                      Misael started his soccer career at the age of 10 years old. He joined local club Cosmos Jrs. after hearing about it
                      from a classmate, Marcos. It would be here that he would consolidate himself as a defender, specifically playing at
@@ -63,7 +64,7 @@
 
          <article>
                <h3>Pattonville JV Team</h3>
-                  <img src='./pictures/IMG_0832.JPG' class="rightpic" style="height: 270px;" alt="Misael playing for the Pattonville JV Team.">
+                  <img src='./pictures/IMG_0832.JPG' class="rightpic"  alt="Misael playing for the Pattonville JV Team.">
                   <p id = 'left'>
                      The next year, Misael would play for the JV team. He was one of the 20 people that made the team from the original 30
                      players that tried out. The season would end with a record of 10 wins and 9 losses. It would be in a 10-0 win against
@@ -74,7 +75,7 @@
 
          <article>
                <h3>Pattonville Varsity Team</h3>
-                  <img src='./pictures/IMG_0831.JPG' class="leftpic" alt="Misael playing for the Pattonville Varsity Team.">
+                  <img src='./pictures/IMG_0831.JPG' class="leftpic" alt="Misael playing for the Pattonville Varsity Team." style="padding: 5px 10px 0px;">
                   <p id = 'right'>
                      The final team Misael played for was the Varsity team. He would again play in his normal position of right back.
                      Although there would be a lot of close games, they would end the season with 13 wins, 17 loses, and 2 draws. Of those
@@ -84,10 +85,10 @@
          </article>
 
          <article>
-            <a name=Retirement></a>
+            <a name=Retirement style="padding: 5px 10px 0px;"></a>
             <h2>Retirement</h2>
             <hr class="dotted">
-               <img src='./pictures/IMG_0447.JPG' class="rightpic" alt="Misael and Chris at the Gold Cup Final in Chicago">
+               <img src='./pictures/IMG_0447.JPG' class="rightpic" alt="Misael and Chris at the Gold Cup Final in Chicago" style="height: 220px;">
                <p id = 'left'>
                   After Misael's last game for his highschool team he would go on to play for an indoor team he and his friends made. In
                   the first season they would end up making it to the final. In a heated and dramatic game they would end in a penalty
@@ -99,9 +100,11 @@
          </article>
          
       </main>
-
-      <footer>
-         <p id = 'testP' class="funParagraph">&copy; Misael Barcenas</p>
-      </footer>
    </body>
+
+   
+   <footer>
+      <p id = 'testP' class="funParagraph">&copy; Misael Barcenas</p>
+   </footer>
+   
 </html>
